--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <section>
-    <h2>Login</h2>
+    <h2>JOIN +</h2>
     <form [formGroup]="applyForm" (ngSubmit)="submitLogin()">
         <label for="E-mail">Your E-mail</label>
         <input type="email" id="email" formControlName="email">
