add register and forgot-password component with routing

--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -20,8 +20,8 @@
             {{ isLoading ? 'Lade...' : 'Login' }}
         </button>
     </form>
-    <div>
-        <a routerLink="/forgot-password">Forgot Password?</a>
-        <a routerLink="/register">Create account</a>
+    <div class="bottom-links">
+        <a routerLink="/forgot-password" class="link">Forgot Password?</a>
+        <a routerLink="/register" class="link">Create account</a>
     </div>
 </section>
