--- a/src/pages/login/login.component.scss
+++ b/src/pages/login/login.component.scss
@@ -20,7 +20,21 @@ form {
 h2 {
     color: $text-color;
     @include center;
-    font-size: 30px;
+    font-size: 2rem;
     font-weight: bold;
     margin: 0 0 20px;
+}
+
+.link {
+    color: $text-color;
+    font-size: 1rem;
+    font-weight: 400;
+    cursor: pointer;
+    &:hover {
+        text-decoration: underline
+    }
+}
+
+.bottom-links {
+    @include center($g: 1rem);
 }
