--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -1,24 +1,33 @@
 <section>
     <h2>JOIN +</h2>
     <form [formGroup]="applyForm" (ngSubmit)="submitLogin()">
-        <label for="E-mail">Your E-mail</label>
-        <input type="email" id="email" formControlName="email">
-        <div *ngIf="applyForm.get('email')?.invalid && applyForm.get('email')?.touched">
-            <span>Bitte geben Sie eine gültige E-Mail-Adresse ein.</span>
+        <div>
+            <label for="E-mail">Your E-mail</label>
+            <input type="email" id="email" formControlName="email">
+            <div *ngIf="applyForm.get('email')?.invalid && applyForm.get('email')?.touched">
+                <span>Bitte geben Sie eine gültige E-Mail-Adresse ein.</span>
+            </div>
         </div>
 
-        <label for="Password">Your Password</label>
-        <input type="password" id="password" formControlName="password">
-        <div *ngIf="applyForm.get('password')?.invalid && applyForm.get('password')?.touched">
-            <span>Bitte geben Sie ein Passwort ein.</span>
+        <div>
+            <label for="Password">Your Password</label>
+            <input type="password" id="password" formControlName="password">
+            <div *ngIf="applyForm.get('password')?.invalid && applyForm.get('password')?.touched">
+                <span>Bitte geben Sie ein Passwort ein.</span>
+            </div>
         </div>
 
-        <input type="checkbox" id="rememberMe" formControlName="rememberMe">
-        <label for="rememberMe ">Remember me</label>
+        <div>
+            <input type="checkbox" id="rememberMe" formControlName="rememberMe">
+            <label for="rememberMe ">Remember me</label>
+        </div>
 
-        <button type="submit" [disabled]="applyForm.invalid || isLoading">
-            {{ isLoading ? 'Lade...' : 'Login' }}
-        </button>
+        <div>
+            <button type="submit" [disabled]="applyForm.invalid || isLoading">
+                {{ isLoading ? 'Lade...' : 'Login' }}
+            </button>
+        </div>
+
     </form>
     <div class="bottom-links">
         <a routerLink="/forgot-password" class="link">Forgot Password?</a>
