--- a/src/pages/login/login.component.scss
+++ b/src/pages/login/login.component.scss
@@ -10,6 +10,9 @@ section {
 
 form {
     background-color: $text-color;
+    opacity: 0.9;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    border-radius: 10px;
     width: 500px;
     height: 350px;
     margin: 2rem;
