styled the home page

--- a/src/pages/home/home.component.html
+++ b/src/pages/home/home.component.html
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="hero-image">
-      <img src="../../../public/task.jpg" alt="Task Manager Illustration" />
+      <img src="../../assets/images/home/task.jpg" alt="Task Manager Illustration" />
     </div>
   </section>
 </div>
