--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,8 @@ html, body {
 
 $primary-color: #3498db;
 $primary-color-hover: #2980b9;
+$btn-primary-color: #54a2c1;
+$btn-primary-color-hover: #053143;
 $secondary-color: #71413f;
 $background-color: linear-gradient(to top right, #3e949a, #1c3739);
 $parting-color: linear-gradient(to top right, #71413f, #3a5876);
